--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -2,12 +2,12 @@
   <div class="main-header-logo">
     <!-- Logo Header -->
     <div class="logo-header" data-background-color="dark">
-      <a href="index.html" class="logo">
+      <a class="logo" href="index.html">
         <img
-          src="assets/img/kaiadmin/logo_light.svg"
           alt="navbar brand"
           class="navbar-brand"
           height="20"
+          src="assets/img/kaiadmin/logo_light.svg"
         />
       </a>
       <div class="nav-toggle">
@@ -34,14 +34,14 @@
       >
         <div class="input-group">
           <div class="input-group-prepend">
-            <button type="submit" class="btn btn-search pe-1">
+            <button class="btn btn-search pe-1" type="submit">
               <i class="fa fa-search search-icon"></i>
             </button>
           </div>
           <input
-            type="text"
-            placeholder="Search ..."
             class="form-control"
+            placeholder="Search ..."
+            type="text"
           />
         </div>
       </nav>
@@ -51,12 +51,12 @@
           class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none"
         >
           <a
+            aria-expanded="false"
+            aria-haspopup="true"
             class="nav-link dropdown-toggle"
             data-bs-toggle="dropdown"
             href="#"
             role="button"
-            aria-expanded="false"
-            aria-haspopup="true"
           >
             <i class="fa fa-search"></i>
           </a>
@@ -64,9 +64,9 @@
             <form class="navbar-left navbar-form nav-search">
               <div class="input-group">
                 <input
-                  type="text"
-                  placeholder="Search ..."
                   class="form-control"
+                  placeholder="Search ..."
+                  type="text"
                 />
               </div>
             </form>
@@ -74,26 +74,26 @@
         </li>
         <li class="nav-item topbar-icon dropdown hidden-caret">
           <a
+            aria-expanded="false"
+            aria-haspopup="true"
             class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
             href="#"
             id="messageDropdown"
             role="button"
-            data-bs-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
           >
             <i class="fa fa-envelope"></i>
           </a>
           <ul
-            class="dropdown-menu messages-notif-box animated fadeIn"
             aria-labelledby="messageDropdown"
+            class="dropdown-menu messages-notif-box animated fadeIn"
           >
             <li>
               <div
                 class="dropdown-title d-flex justify-content-between align-items-center"
               >
                 Messages
-                <a href="#" class="small">Mark all as read</a>
+                <a class="small" href="#">Mark all as read</a>
               </div>
             </li>
             <li>
@@ -102,8 +102,8 @@
                   <a href="#">
                     <div class="notif-img">
                       <img
-                        src="assets/img/jm_denis.jpg"
                         alt="Img Profile"
+                        src="assets/img/jm_denis.jpg"
                       />
                     </div>
                     <div class="notif-content">
@@ -115,8 +115,8 @@
                   <a href="#">
                     <div class="notif-img">
                       <img
-                        src="assets/img/chadengle.jpg"
                         alt="Img Profile"
+                        src="assets/img/chadengle.jpg"
                       />
                     </div>
                     <div class="notif-content">
@@ -128,8 +128,8 @@
                   <a href="#">
                     <div class="notif-img">
                       <img
-                        src="assets/img/mlane.jpg"
                         alt="Img Profile"
+                        src="assets/img/mlane.jpg"
                       />
                     </div>
                     <div class="notif-content">
@@ -143,8 +143,8 @@
                   <a href="#">
                     <div class="notif-img">
                       <img
-                        src="assets/img/talha.jpg"
                         alt="Img Profile"
+                        src="assets/img/talha.jpg"
                       />
                     </div>
                     <div class="notif-content">
@@ -165,20 +165,20 @@
         </li>
         <li class="nav-item topbar-icon dropdown hidden-caret">
           <a
+            aria-expanded="false"
+            aria-haspopup="true"
             class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
             href="#"
             id="notifDropdown"
             role="button"
-            data-bs-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
           >
             <i class="fa fa-bell"></i>
             <span class="notification">4</span>
           </a>
           <ul
-            class="dropdown-menu notif-box animated fadeIn"
             aria-labelledby="notifDropdown"
+            class="dropdown-menu notif-box animated fadeIn"
           >
             <li>
               <div class="dropdown-title">
@@ -211,8 +211,8 @@
                   <a href="#">
                     <div class="notif-img">
                       <img
-                        src="assets/img/profile2.jpg"
                         alt="Img Profile"
+                        src="assets/img/profile2.jpg"
                       />
                     </div>
                     <div class="notif-content">
@@ -243,10 +243,10 @@
         </li>
         <li class="nav-item topbar-icon dropdown hidden-caret">
           <a
+            aria-expanded="false"
             class="nav-link"
             data-bs-toggle="dropdown"
             href="#"
-            aria-expanded="false"
           >
             <i class="fas fa-layer-group"></i>
           </a>
@@ -322,57 +322,59 @@
 
         <li class="nav-item topbar-user dropdown hidden-caret">
           <a
+            aria-expanded="false"
             class="dropdown-toggle profile-pic"
             data-bs-toggle="dropdown"
             href="#"
-            aria-expanded="false"
           >
             <div class="avatar-sm">
               <img
-                src="assets/img/profile.jpg"
                 alt="..."
                 class="avatar-img rounded-circle"
+                src="assets/img/profile.jpg"
               />
             </div>
             <span class="profile-username">
-                      <span class="op-7">Hi,</span>
-                      <span class="fw-bold">Hizrian</span>
+                      <span *ngIf=" authService.currentUser$ | async as user" class="fw-bold">
+                        {{ user.name }},
+                        <ng-container *ngIf="authService.getRoleFromMap() | async as role">
+                          {{ role }}
+                        </ng-container>
+                      </span>
                     </span>
           </a>
-          <ul class="dropdown-menu dropdown-user animated fadeIn">
-            <div class="dropdown-user-scroll scrollbar-outer">
-              <li>
-                <div class="user-box">
-                  <div class="avatar-lg">
-                    <img
-                      src="assets/img/profile.jpg"
-                      alt="image profile"
-                      class="avatar-img rounded"
-                    />
+          <ng-container *ngIf=" authService.currentUser$ | async as user">
+            <ul class="dropdown-menu dropdown-user animated fadeIn">
+              <div class="dropdown-user-scroll scrollbar-outer">
+                <li>
+                  <div class="user-box">
+                    <div class="avatar-lg">
+                      <img
+                        alt="image profile"
+                        class="avatar-img rounded"
+                        src="assets/img/profile.jpg"
+                      />
+                    </div>
+                    <div class="u-text">
+
+                      <h4>{{ user.name }}</h4>
+                      <p class="text-muted">{{ user.email }}</p>
+                    </div>
                   </div>
-                  <div class="u-text">
-                    <h4>Hizrian</h4>
-                    <p class="text-muted">helloexample.com</p>
-                    <a
-                      href="profile.html"
-                      class="btn btn-xs btn-secondary btn-sm"
-                    >View Profile</a
-                    >
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">My Profile</a>
-                <a class="dropdown-item" href="#">My Balance</a>
-                <a class="dropdown-item" href="#">Inbox</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Account Setting</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
-              </li>
-            </div>
-          </ul>
+                </li>
+                <li>
+                  <div class="dropdown-divider"></div>
+                  <a [routerLink]="['/user-view', user.id]" class="dropdown-item">My Profile</a>
+                  <!--<a class="dropdown-item" href="#">My Balance</a>
+                  <a class="dropdown-item" href="#">Inbox</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Account Setting</a>-->
+                  <div class="dropdown-divider"></div>
+                  <a (click)="logout()" class="dropdown-item" href="#">Logout</a>
+                </li>
+              </div>
+            </ul>
+          </ng-container>
         </li>
       </ul>
     </div>
