--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -7,7 +7,7 @@
           alt="navbar brand"
           class="navbar-brand"
           height="20"
-          src="assets/img/kaiadmin/logo_light.svg"
+          src="assets/img/kaiadmin/logo_ums_light.png"
         />
       </a>
       <div class="nav-toggle">
