--- a/src/app/academy/faculty/faculty-form/faculty-form.component.html
+++ b/src/app/academy/faculty/faculty-form/faculty-form.component.html
@@ -4,7 +4,7 @@
       <div class="card-header">
         <div class="card-title">Enter Faculty Information</div>
       </div>
-      <form (ngSubmit)="createFaculty()" method="post">
+      <form (ngSubmit)="createOrUpdateFaculty()" method="post">
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
