--- a/src/app/academy/program/program-list/program-list.component.html
+++ b/src/app/academy/program/program-list/program-list.component.html
@@ -1,13 +1,12 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <div class="pull-right">
-      <button class="btn btn-success" [routerLink]="['/faculty-form']">
+      <button class="btn btn-success" [routerLink]="['/program-form']">
         <i class="fa fa-plus"></i> Add New
       </button>
     </div>
   </div>
 </div>
-
 <div class="row">
   <div class="col-md-12">
     <div class="card">
@@ -18,28 +17,28 @@
             <tr>
               <th class="col-md-1">SL</th>
               <th>Name</th>
-              <th>Email</th>
-              <th>Contact No.</th>
-              <th>Dean</th>
-              <th class="text-center col-md-1">Action</th>
+              <th>Duration (Years)</th>
+              <th>Department</th>
+              <th class="text-center col-md-2">Action</th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let faculty of faculties; let i = index;">
+            <tr *ngFor="let program of programs; let i = index;">
               <td>{{ i + 1 }}</td>
-              <td>{{ faculty.name || '-' }}</td>
-              <td>{{ faculty.email || '-' }}</td>
-              <td>{{ faculty.contact || '-' }}</td>
-              <td>{{ faculty.dean.name || '-' }}</td>
+              <td>{{ program.name || '-' }}</td>
+              <td>{{ program.durationYear || '-' }}</td>
+              <td>{{ program.department.name || '-' }}</td>
               <td>
                 <div class="form-button-action">
-                  <button [routerLink]="['/faculty-view', faculty.id]" class="btn btn-link btn-primary btn-lg" title="View" type="button">
+                  <button [routerLink]="['/program-view', program.id]" class="btn btn-link btn-primary btn-lg"
+                          title="View"
+                          type="button">
                     <i class="fa fa-eye"></i>
                   </button>
-                  <button [routerLink]="['/faculty-form', faculty.id]" class="btn btn-link btn-primary btn-lg" title="Edit" type="button">
+                  <button [routerLink]="['/program-form', program.id]" class="btn btn-link btn-primary btn-lg" title="Edit" type="button">
                     <i class="fa fa-edit"></i>
                   </button>
-                  <button (click)="deleteFaculty(faculty.id)" class="btn btn-link btn-danger" title="Delete" type="button">
+                  <button (click)="deleteProgram(program.id)" class="btn btn-link btn-danger" title="Delete" type="button">
                     <i class="fa fa-times"></i>
                   </button>
                 </div>
