--- a/src/app/academy/student/student-form/student-form.component.html
+++ b/src/app/academy/student/student-form/student-form.component.html
@@ -4,7 +4,7 @@
       <div class="card-header">
         <div class="card-title">Enter Student Information</div>
       </div>
-      <form (ngSubmit)="createStudent()" method="post" enctype="multipart/form-data">
+      <form (ngSubmit)="createOrUpdateStudent()" method="post" enctype="multipart/form-data">
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
