--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
 .ng-select .ng-dropdown-panel {
   background-color: white;
+  border: 1px solid #ccc; /* Adjust the color and width as needed */
+  border-radius: 4px; /* Optional: to give rounded corners */
+  padding: 5px; /* Add padding */
+}
+
+.ng-select {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px;
 }
