--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -126,7 +126,7 @@
           <div class="collapse" id="exam">
             <ul class="nav nav-collapse">
               <li routerLinkActive="active">
-                <a [routerLink]="['/exam-list']" routerLinkActive="active">
+                <a [routerLink]="['/examination-list']" routerLinkActive="active">
                   <span class="sub-item">Exams</span>
                 </a>
               </li>
